@@ -579,7 +579,7 @@
                             <button class="btn" onclick="window.open('https://discord.gg/Ekp8FsSwzR')">Join Discord</button>
                             <button class="btn tooltip" onclick="window.open('https://boosty.to/mrredshark77')" tooltip-html="Support the original creator of IMR!">Donate</button>
                             <button class="btn" onclick="createPopup(POPUP_GROUPS.help.html,'help')">Help</button><br>
-                            <button class="btn" onclick="turnOffline()">Offline Production: <span id="offline_active">ON</span></button>
+                            <button class="btn" onclick="turnOffline()">Offline Production: <span id="offline_active">OFF</span></button>
                             <button class="btn" onclick="createPopup(POPUP_GROUPS.fonts.html,'fonts')">Fonts</button>
                             <button class="btn" onclick="createPopup(POPUP_GROUPS.notations.html,'notations')">Notations</button>
                             <button class="btn" id="tree_anim_btn" onclick="changeTreeAnimation()">Tree Animation: <span id="tree_anim">ON</span></button>
